fixes metadata connect overflow

--- a/components/meta_pocket/stylesheets/meta_pocket.styl
+++ b/components/meta_pocket/stylesheets/meta_pocket.styl
@@ -48,6 +48,9 @@
     padding-top 18px
     float right
     text-align right
+  
+#metadata--actions
+  overflow-y visible
 
 div#metadata__column-manage
   &.is-expanded
